# yeno

./: .gitignore  TODO.md  package.json  playwright.config.ts  vite.config.ts
app/: app.css  root.tsx
app/components/debug/: DebugBar.tsx  types.ts  useFpsMetric.ts
app/components/editor/: AssetsContext.tsx  ContinuousView.tsx  DocumentRenderer.tsx  EditorShell.tsx  PaginatedView.tsx  Toolbar.tsx
app/components/editor/core/: ContentEditableRoot.tsx  EditorContext.tsx  blockUtils.ts  domSelection.ts  history.ts
app/components/editor/nodes/: ImageComponent.tsx  ImageNode.tsx  PageBreakNode.tsx
app/components/editor/plugins/: ImagePlugin.tsx  ImageResizePlugin.tsx  (+2 more)
app/components/versioning/: DiffViewer.tsx  VersionPanel.tsx  index.ts
app/lib/doc/: applyRanges.ts  createEmptyDocument.ts  deserialize.ts  editorEngine.ts  fonts.ts  hotkeys.ts  imageToken.ts  schema.ts  selectionFromOffsets.ts  serialize.ts  textBuffer.ts  treeUtils.ts  uuid.ts
app/lib/versioning/: api.ts  index.ts  types.ts  web.ts
app/lib/wasm/: api.ts  index.ts  loader.ts  types.ts  wasm.worker.ts  worker-pool.ts
app/routes/: home.tsx
docs/: TODO.md  fileformat.md
public/wasm/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: document.rs  mod.rs  versioning.rs
src-tauri/src/model/: mod.rs  piece_table.rs  version.rs
src-tauri/src/storage/: checksum.rs  mod.rs  zip_container.rs
test-results/: .last-run.json
wasm/yeno-wasm/: Cargo.toml  build.sh
wasm/yeno-wasm/src/: compress.rs  crdt.rs  diff.rs  lib.rs  search.rs
(+3 files in other folders)
