[package]
name = "yeno-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM modules for Yeno editor: compression, search, CRDT, and diff"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
lz4_flex = "0.11"
regex = "1.11"
aho-corasick = "1.1"
similar = "2.6"
yrs = "0.21"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
